<resources>
    <string name="app_name">OnlineOrdering</string>
    <string name="home">首页</string>
    <string name="nearby">附近</string>
    <string name="list">订单</string>
    <string name="me">我的</string>
    <!--me里面的strings-->
    <string name="me_top_login_text">请点击登录</string>

    <string name="me_layout1_text1">我的钱包</string>
    <string name="me_layout1_text2">余额</string>
    <string name="me_layout1_text3">抵用券</string>
    <string name="me_layout1_text4">卡包</string>

    <string name="me_layout2_text1">好友去哪</string>
    <string name="me_layout2_text2">我的评价</string>
    <string name="me_layout2_text3">我的收藏</string>
    <string name="me_layout2_text4">会员中心</string>
    <string name="me_layout2_text5">积分商城</string>

    <string name="me_layout3_text1">客服中心</string>
    <string name="me_layout3_text2">关于我们</string>

    <string name="me_layout_login_fragment_hint1">手机号</string>
    <string name="me_layout_login_fragment_hint2">密码</string>
</resources>
