<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="53dp"
    android:background="@drawable/bottom"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/id_tab_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/id_tab_home_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:background="#00000000"
            android:clickable="false"
            android:src="@mipmap/tab_home_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textColor="@color/tab_name_color"
            android:textSize="12dp"
            android:layout_gravity="center_horizontal" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_tab_nearby"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/id_tab_nearby_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:background="#00000000"
            android:clickable="false"
            android:src="@mipmap/tab_nearby_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nearby"
            android:textColor="@color/tab_name_color"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_tab_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/id_tab_list_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:background="#00000000"
            android:clickable="false"
            android:src="@mipmap/tab_list_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list"
            android:textColor="@color/tab_name_color"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_tab_me"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/id_tab_me_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:background="#00000000"
            android:clickable="false"
            android:src="@mipmap/tab_me_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/me"
            android:textColor="@color/tab_name_color"
            android:textSize="12dp" />
    </LinearLayout>
</LinearLayout>
