<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/me_backgroud"
              android:orientation="vertical">
    <!--top-->
    <include layout="@layout/top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--login-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/title"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:id="@+id/me_login"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:background="@mipmap/chef"/>

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="12dp"-->
                <!--android:text="@string/me_top_login_text"-->
                <!--android:textColor="@color/me_login_text"/>-->
        </LinearLayout>

        <!--layout之间的分割区-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="8dp">
        </LinearLayout>
        <!--layout1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@color/me_layout_backgroud"
            android:orientation="vertical">

            <!--layout1_view1-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="12dp"
                    android:background="@mipmap/me_layou1_money"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text="@string/me_layout1_text2"
                    android:textSize="15dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@mipmap/me_layout_skip"/>
            </LinearLayout>
            <!--view之间的分割线-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="@color/account_line"/>
            <!--layout1_view2-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/me_layout1_view2"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="15dp"
                    android:background="@mipmap/me_layou1_wallet"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text="@string/me_layout1_text1"
                    android:textSize="15dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@mipmap/me_layout_skip"/>
            </LinearLayout>

            <!--view之间的分割线-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="@color/account_line"/>

            <!--layout1_view3-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick=""
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="12dp"
                    android:background="@mipmap/me_layou1_coupon"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text="@string/me_layout1_text3"
                    android:textSize="15dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@mipmap/me_layout_skip"/>
            </LinearLayout>

            <!--view之间的分割线-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="@color/account_line"/>
            <!--layout1_view4-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick=""
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="12dp"
                    android:background="@mipmap/me_layou1_card"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text="@string/me_layout1_text4"
                    android:textSize="15dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@mipmap/me_layout_skip"/>
            </LinearLayout>
        </LinearLayout>

        <!--layout之间的分割区-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="8dp">
        </LinearLayout>
        <!--layout2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="@color/me_layout_backgroud"
            android:orientation="vertical">
            <!--layout2_view1-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick=""
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@mipmap/me_layout2_view1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text="@string/me_layout2_text1"
                    android:textSize="15dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@mipmap/me_layout_skip"/>
            </LinearLayout>

            <!--view之间的分割线-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="@color/account_line"/>
            <!--layout2_view2-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick=""
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@mipmap/me_layout2_view2"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text="@string/me_layout2_text2"
                    android:textSize="15dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@mipmap/me_layout_skip"/>
            </LinearLayout>

            <!--view之间的分割线-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="@color/account_line"/>
            <!--layout2_view3-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick=""
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@mipmap/me_layout2_view3"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text="@string/me_layout2_text3"
                    android:textSize="15dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@mipmap/me_layout_skip"/>
            </LinearLayout>

            <!--view之间的分割线-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="@color/account_line"/>
            <!--layout2_view4-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick=""
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@mipmap/me_layout2_view4"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text="@string/me_layout2_text4"
                    android:textSize="15dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@mipmap/me_layout_skip"/>
            </LinearLayout>

            <!--view之间的分割线-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="@color/account_line"/>
            <!--layout2_view5-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick=""
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@mipmap/me_layout2_view5"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text="@string/me_layout2_text5"
                    android:textSize="15dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@mipmap/me_layout_skip"/>
            </LinearLayout>

        </LinearLayout>

        <!--layout之间的分割区-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="8dp">
        </LinearLayout>
        <!--layout3-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/me_layout_backgroud"
            android:orientation="vertical">

            <!--layout3_view1-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick=""
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@mipmap/me_layout3_view1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text="@string/me_layout3_text1"
                    android:textSize="15dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@mipmap/me_layout_skip"/>
            </LinearLayout>

            <!--view之间的分割线-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="@color/account_line"/>
            <!--layout3_view2-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick=""
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@mipmap/me_layout3_view2"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text="@string/me_layout3_text2"
                    android:textSize="15dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@mipmap/me_layout_skip"/>
            </LinearLayout>

            <!--view之间的分割线-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="@color/account_line"/>
        </LinearLayout>

    </LinearLayout>
    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:gravity="center"-->
    <!--android:text="第四页"-->
    <!--android:textSize="40sp"-->
    <!--android:textStyle="bold" />-->
</LinearLayout>
